--- a/MediaInfo.14.Website/MediaInfo.14.Website.csproj
+++ b/MediaInfo.14.Website/MediaInfo.14.Website.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MediaInfo.14\MediaInfo.14.csproj" />
+    <ProjectReference Include="..\MediaInfo.14\MediaInfo.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
