--- a/mediainfo.14.client/package.json
+++ b/mediainfo.14.client/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "mediainfo.14.client",
+  "name": "assets",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "dev": "vite",
     "build": "tsc && vite build",
+    "preview": "vite preview",
     "watch": "vite build --watch"
   },
   "dependencies": {
-    "lit": "^3.1.4"
+    "lit": "^3.1.0"
   },
   "devDependencies": {
-    "@umbraco-cms/backoffice": "^14.1.1",
+    "@umbraco-cms/backoffice": "^14.0.0",
+    "eslint": "^9.8.0",
     "typescript": "^5.2.2",
-    "vite": "^5.3.4"
+    "vite": "^5.2.8"
   }
 }
