added package stuff
readme and icon for package

--- a/MediaInfo.14.Website/MediaInfo.14.Website.csproj
+++ b/MediaInfo.14.Website/MediaInfo.14.Website.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Our.Community.MediaInfo" Version="14.0.1-rc001" />
     <PackageReference Include="Umbraco.Cms" Version="14.1.1" />
   </ItemGroup>
 
@@ -14,10 +15,6 @@
     <!-- Opt-in to app-local ICU to ensure consistent globalization APIs across different platforms -->
     <PackageReference Include="Microsoft.ICU.ICU4C.Runtime" Version="72.1.0.3" />
     <RuntimeHostConfigurationOption Include="System.Globalization.AppLocalIcu" Value="72.1.0.3" Condition="$(RuntimeIdentifier.StartsWith('linux')) or $(RuntimeIdentifier.StartsWith('win')) or ('$(RuntimeIdentifier)' == '' and !$([MSBuild]::IsOSPlatform('osx')))" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\MediaInfo.14\MediaInfo.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
