added marketplace json file

--- a/MediaInfo.14/MediaInfo.csproj
+++ b/MediaInfo.14/MediaInfo.csproj
@@ -10,13 +10,15 @@
   <PropertyGroup>
     <PackageId>Our.Community.MediaInfo</PackageId>
     <Product>MediaInfo</Product>
-    <Version>14.0.1-rc001</Version>
+    <Version>14.0.0</Version>
     <Title>Media Info</Title>
     <Description>A content app for umbraco which shows the File Info for your media items such as the GPS and Camera details</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageIcon>icon.png</PackageIcon>
     <PackageReadmeFile>readme.md</PackageReadmeFile>
-    <PackageTags>umbraco plugin package</PackageTags>
+    <PackageProjectUrl>https://github.com/huwred/MediaInfo-14</PackageProjectUrl>
+    <PackageTags>umbraco-marketplace umbraco plugin package</PackageTags>
+    <RepositoryUrl>https://github.com/huwred/MediaInfo-14</RepositoryUrl>
   </PropertyGroup>
 
 	<ItemGroup>
